# JO_Paris2024

./: .env  .gitignore  Procfile  README.md  install.sh  manage.py  requirements.txt
.env/: pyvenv.cfg
JO_app/: DELETE FROM myschema."JO_app_site";.pgsql  admin.py  forms.py  models.py  tests.py  urls.py  (+1 more)
src/: .coverage  Procfile  procfile  pyproject.toml  requirements.txt
src/JO_app/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/JO_app/migrations/: 0001_initial.py  0002_alter_ticket_clef_finale.py  0003_rename_offredebillets_offredebillet.py  0005_utilisateur_is_superuser_alter_utilisateur_password.py  0008_site_sport_offredebillet_site_offredebillet_sport.py  0009_reservation_noms_utilisateurs.py
src/JO_app/static/: profil.css  script.js  style.css
src/JO_app/static/images/: .Grand-Palais.jpg.icloud  .paris.jpg.icloud  .tour_eiffel.avif.icloud  .tour_eiffel.jpg.icloud
src/JO_app/static/images/sites_olympique/: .Stade Pierre Mauroy.jpg.icloud  .Stade de Marseille.jpg.icloud
src/JO_app/templates/JO_app/: ajouter_au_panier.html  detail_sport.html  footer.html  home.html  navigation.html  paiement.html  panier.html  reservation.html  supprimer_offre.html
src/JO_app/templates/JO_app/account/: compte_utilisateur.html  connexion.html  deconnexion.html  inscription.html
src/JO_app/tests/: selenium_tests.py  tests_forms.py  tests_models.py  tests_urls.py  tests_views.py
src/Jeux_Paris2024/: settings.py  urls.py  wsgi.py
src/staticfiles/: staticfiles.json
src/staticfiles/images/sports/: tennis_picto.avif
src/templates/: base.html
(+17 files in other folders)
