[tool.poetry]
name = "jo-app"
version = "0.1.0"
description = ""
authors = ["Bilal Lamamra <bilal.lamamra@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-plugin-export = "^1.8.0"
psycopg2-binary = "^2.9.9"
django-heroku = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
