[tool.poetry]
name = "jo-app"
version = "0.1.0"
description = ""
authors = ["Bilal Lamamra <bilal.lamamra@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-plugin-export = "^1.8.0"
psycopg2-binary = "^2.9.9"
django-heroku = "^0.3.1"
whitenoise = "^6.6.0"
boto3 = "^1.34.116"
django-storages = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
